syntax = "proto3";

option go_package = "../pb;pb";

import "google/protobuf/timestamp.proto";

service UserService {
    rpc UserRegister(UserRegisterRequest) returns (UserRegisterResponse) {}

    rpc GetUserByPhoneNumber(GetUserByPhoneNumberRequest) returns (GetUserByPhoneNumberResponse) {}

}

message User {
    int32 id = 1;
    string username = 2;
    string phone_number = 3;
    string password = 4;
    string avatar = 5;
    string identity = 6;
    string ip_position = 7;
    // 创建时间
    google.protobuf.Timestamp create_time = 8;
    // 更新时间
    google.protobuf.Timestamp update_time = 9;
}

message UserRegisterRequest {
    string username = 1;
    string phone_number = 2;
    string password = 3;
    string avatar = 4;
    string identity = 5;
    string ip_position = 6;
}

message UserRegisterResponse {
    User user = 1;
}

message GetUserByPhoneNumberRequest {
    string phone_number = 1;
}

message GetUserByPhoneNumberResponse {
    User user = 1;
}